# izanagi-2022

./: .editorconfig  .gitignore  README.md  TODO.md  macos-arm64-clang.txt  meson.build  win-x86-64-clang.txt
__mocks__/subprojects/SDL/: SDL_events.mock.h  SDL_gamecontroller.mock.h  SDL_keyboard.mock.h  SDL_render.mock.h  SDL_stdinc.mock.h
__mocks__/subprojects/ini-config/source/: ini-config.mock.h
__mocks__/subprojects/minIni/: minIni.mock.h
__mocks__/subprojects/portmidi/: portmidi.mock.h
assets/internal/default/weapon-servant/: animation.json
assets_src/gfx/: characters-izanagi.cdr  props.cdr  weapons-rigged.cdr
docs/meta/: audio_events.txt  characters.md  coding-principles.md  sprites.md
docs/reference/: controls.md  mechanics.md  weapons.md
docs/reference/files/: config-game.ini  config-server.ini
subprojects/: bdd_for_c.wrap  ini_config.wrap  libwebsockets.wrap  midi_utils.wrap  portmidi.wrap  zlib.wrap
tools/animation-workbench/: package.json  remix.config.js  tailwind.config.js
tools/animation-workbench/app/: root.tsx
tools/animation-workbench/app/components/Button/: index.tsx
tools/animation-workbench/app/components/ComboBox/: index.tsx
tools/animation-workbench/app/components/FileButton/: index.tsx
tools/animation-workbench/app/modules/: file.ts
tools/animation-workbench/app/routes/: index.tsx
tools/audio-interval-test/: index.html  index.js  sfx
tools/websocket-client/: index.html  index.js
